  * make grub timeout integer in data/fll.conf.spec default to 1 not '1'
  * fix doc of compression (default is actually none now)
  * add file option to config for squashfs and tar and adjust to match
  * mountvirtfs on init and umount on deinint
  * only mountvirtfs in command if not mounted and umount if it had to
  * refactor mounting so chroot.nuke umounts all but exit just undoes virtfs

 -- Niall Walsh <niallwalsh@celtux.org>  Tue, 05 Aug 2014 21:49:17 +0100

python-fll (0.9.15) unstable; urgency=medium

  * bin/fll make pkgmod actually expand the profile.

 -- Niall Walsh <niallwalsh@celtux.org>  Wed, 30 Jul 2014 17:52:32 +0100

python-fll (0.9.14) unstable; urgency=medium

  * umount the virtfs after cdebootstrap to account for #755965.

 -- Niall Walsh <niallwalsh@celtux.org>  Wed, 30 Jul 2014 02:00:37 +0100

python-fll (0.9.13) unstable; urgency=medium

  [ Niall Walsh ]
  * bin/fll enhancements
    - allow setting of hostname
    - add password in distro to set password and addusers or autologin
    - force cdebootstrap to systemd-sysv and include core packages
    - add fscomp code to actually mksquashfs
    - add tar option to fscomp
    - create initramfs on chroot deinit
    - write empty /etc/machine-id on chroot deinit
  * bin/fll: fixup /etc/apt/sources.list (and sources.list.d/*) writing

  [ Stefan Lippers-Hollmann ]
  * add bfree to uploaders, so dch can do its magic.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 30 Jul 2014 00:57:42 +0200

python-fll (0.9.12) unstable; urgency=low

  * bump standards version to 3.9.5, no changes necessary.
  * debian/control: switch Vcs tags to github.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 14 Apr 2014 00:02:03 +0200

python-fll (0.9.11) unstable; urgency=low

  * rebuild against python-apt 0.9.0.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 21 Oct 2013 22:22:27 +0200

python-fll (0.9.10) unstable; urgency=low

  * bump standards version to 3.9.4, no changes necessary.
