@@ -11,6 +11,7 @@ python-fll (0.9.16) UNRELEASED; urgency=medium
   * mountvirtfs on init and umount on deinint
   * only mountvirtfs in command if not mounted and umount if it had to
   * refactor mounting so chroot.nuke umounts all but exit just undoes virtfs
+  * add mkfs (extN) compression option
 
  -- Niall Walsh <niallwalsh@celtux.org>  Tue, 05 Aug 2014 21:49:17 +0100
 
